      consistency.
    - Updated the spi methods to check for response errors.
    - Added the UE9 ipAddressFilter method and ue9IPAddressFilter.py example.
    - Fixed the U6 writeMem and eraseMem methods.
    - Fixed the LabJackPython setChecksum function. It now accepts commands of
      at least 6 bytes.
    - Removed the U6 DSP Feedback command class. Experimental feature was
      removed from U6 firmware.
    - Added the spi_sca3000.py example.
    - Updated the voltageToDACBits methods to have a max/min on the return
      value.
    - Updated PWM-looping.py with U3 low-level commands.
    - Updated the eraseMem methods to only accept a Boolean value for the
      eraseCal parameter.
    - Fixed the U3 writeCal method.
    - Updated the device open error checks on Windows. Warnings no longer raise
      an exception.
- Next Release
    - LabJackPython now refuses to install on unsupported Python versions.
    - Fixed U12 watchdog method argument parsing.  If the stateDn argument was
      invalid, it would try to raise Value (undefined) instead of ValueError.
    - Fixed U12 resetLJ method.  This method was intended to call reset but
      would always cause a NameError exception due to a typo.
    - Fixed a stream bug where stopping and restarting the stream did not reset
      the packet offset internal variable which could cause data processing for
      incorrect channels.
    - Changed the operating system detection to use sys.platform instead of
      os.name.
    - Fixed getDevCounts, openAllLabJacks, and GetResultSS on Windows.
    - Added Cygwin support.
    - Fixed a bug in openLabJack where some error conditions on Windows would
      try to raise LabjackException (undefined) instead of LabJackException.
    - Added string descriptions for low-level error codes 112 to 116.
    - Fixed a bug in U6 where I2C responses with an odd number of bytes would
      return an extra byte at the end.