@@ -1224,78 +1224,6 @@ class U12(object):
             returnDict['Channel3'].append(self.bitsToVolts(channel3Number, channel3Gain, channel3))
             
         return returnDict
-
-        
-        
-    def rawAIContinuous(self, channel0PGAMUX = 8, channel1PGAMUX = 9, channel2PGAMUX = 10, channel3PGAMUX = 11, FeatureReports = False, CounterRead = False, UpdateIO = False, LEDState = True, IO3ToIO0States = 0, SampleInterval = 15000):
-        """
-        Currently in development.
-        
-        The function is mostly implemented, but is currently too slow to be 
-        useful.
-        """
-        command = [ 0 ] * 8
-        
-        # Bits 6-4: PGA for 1st Channel
-        # Bits 3-0: MUX command for 1st Channel
-        command[0] = int(channel0PGAMUX)
-        
-        tempNum = command[0] & 7 # 7 = 0b111
-        channel0Number = tempNum if (command[0] & 0xf) > 7 else tempNum+8
-        channel0Gain = (command[0] >> 4) & 7 # 7 = 0b111
-        
-        command[1] = int(channel1PGAMUX)
-        
-        tempNum = command[1] & 7 # 7 = 0b111
-        channel1Number = tempNum if (command[1] & 0xf) > 7 else tempNum+8
-        channel1Gain = (command[1] >> 4) & 7 # 7 = 0b111
-        
-        command[2] = int(channel2PGAMUX)
-        
-        tempNum = command[2] & 7 # 7 = 0b111
-        channel2Number = tempNum if (command[2] & 0xf) > 7 else tempNum+8
-        channel2Gain = (command[2] >> 4) & 7 # 7 = 0b111
-        
-        command[3] = int(channel3PGAMUX)
-        
-        tempNum = command[3] & 7 # 7 = 0b111
-        channel3Number = tempNum if (command[3] & 0xf) > 7 else tempNum+8
-        channel3Gain = (command[3] >> 4) & 7 # 7 = 0b111
-        
-        bf = BitField()
-        bf.bit7 = int(bool(FeatureReports))
-        bf.bit6 = int(bool(CounterRead))
-        bf.bit1 = int(bool(UpdateIO))
-        bf.bit0 = int(bool(LEDState))
-        
-        command[4] = int(bf)
-        
-        # Bits 7-4: 1001 (Start Continuous)
-        bf2 = BitField( rawByte = int(IO3ToIO0States) )
-        bf2.bit7 = 1
-        bf2.bit4 = 1
-        
-        command[5] = int(bf2)
-        
-        command[6] = ( SampleInterval >> 8)
-        command[7] = SampleInterval & 0xff
-        
-        byte0bf = BitField()
-        returnDict = dict()
-        
-        self.write(command)
-        while True:
-            results = self.read()
-            
-            byte0bf.fromByte(results[0])
-            
-            returnDict['Byte0'] = byte0bf
-            returnDict['IterationCounter'] = (results[1] >> 5)
-            returnDict['Backlog'] = results[1] & 0xf
-            
-            
-            yield returnDict
-    
     
     def rawPulseout(self, B1 = 10, C1 = 2, B2 = 10, C2 = 2, D7ToD0PulseSelection = 1, ClearFirst = False, NumberOfPulses = 5):
         """
